k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
        - name: auth
          image: streamingapp-auth:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3001

          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth

  ports:
    - port: 3001
      targetPort: 3001

  type: ClusterIP
